feat!: Remove ZonePresets and GoToLocationPresets
