# backend/lib/entities/core/index.js
@@ -1,7 +1,6 @@
 module.exports = {
     ValetudoDNDConfiguration: require("./ValetudoDNDConfiguration"),
     ValetudoDataPoint: require("./ValetudoDataPoint"),
-    ValetudoGoToLocation: require("./ValetudoGoToLocation"),
     ValetudoMapSegment: require("./ValetudoMapSegment"),
     ValetudoMapSnapshot: require("./ValetudoMapSnapshot"),
     ValetudoRestrictedZone: require("./ValetudoRestrictedZone"),
@@ -15,6 +14,5 @@ module.exports = {
     ValetudoWifiNetwork: require("./ValetudoWifiNetwork"),
     ValetudoWifiStatus: require("./ValetudoWifiStatus"),
     ValetudoZone: require("./ValetudoZone"),
-    ValetudoZonePreset: require("./ValetudoZonePreset"),
     ntpClient: require("./ntpClient")
 };
